--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(links)
 export(maChain)
 export(paChain)
 export(spChain)
+export(txChain)
 exportMethods("[")
 exportMethods(c)
 exportMethods(dim)
