--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Authors@R: c(person(given = "Jeremiah", family = "Wala", role = c("aut"), email 
     person(given = "Marcin",
     family = "Imielinski", role = c("aut", "cre"), email =
     "mimielinski@nygenome.org"))
-Description: R package providing additional capabilities and speed for
-    GenomicRanges operations.
+Description: R package providing additional capabilities and speed for GenomicRanges operations.
+biocViews:
 Depends:
     R (>= 3.1.0),
     GenomicRanges (>= 1.18),
