--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ install:
   - ./travis-tool.sh install_deps
   - ./travis-tool.sh install_github r-lib/covr
   - ./travis-tool.sh install_github mskilab/gUtils
+  - ./travis-tool.sh install_github mskilab/Ppurple
+  - ./travis-tool.sh install_github mskilab/gGnome
 
 script: ./travis-tool.sh run_tests
 
