--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,11 +13,11 @@ Depends:
     GenomicRanges (>= 1.18),
     data.table (>= 1.9),
     Matrix,
-    rtracklayer        
+    rtracklayer, 
+    Biostrings      
 Imports:
     gUtils,
-    GenomicAlignments, 
-    Biostrings
+    GenomicAlignments
 Suggests:
     BSgenome.Hsapiens.UCSC.hg19,
     testthat,
