added bamUtils dependency, fixed cgChain bugs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Depends:
     Biostrings      
 Imports:
     gUtils,
+    bamUtils,
     GenomicAlignments
 Suggests:
     BSgenome.Hsapiens.UCSC.hg19,
