--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ Authors@R: c(person(given = "Jeremiah", family = "Wala", role = c("aut"), email 
     "mimielinski@nygenome.org"))
 Description: R package providing additional capabilities and speed for
     GenomicRanges operations.
+Remotes:
+  github::mskilab/gUtils
 Depends:
     R (>= 3.1.0),
     GenomicRanges (>= 1.18),
