--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,9 @@ Authors@R: c(person(given = "Jeremiah", family = "Wala", role = c("aut"), email 
     "mimielinski@nygenome.org"))
 Description: R package providing additional capabilities and speed for GenomicRanges operations.
 Remotes:
-  github::mskilab/gUtils
+  github::mskilab/gUtils,
+  github::mskilab/bamUtils,
+  github::mskilab/gTrack
 Depends:
     R (>= 3.1.0),
     GenomicRanges (>= 1.18),
@@ -27,4 +29,4 @@ Suggests:
 License: GPL-2
 BugReports: http://github.com/mskilab/gUtils/issues
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.2.1.9000
