--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,7 @@ exportMethods(seqinfo)
 exportMethods(t)
 import(GenomicRanges)
 import(Matrix)
+import(bamUtils)
 import(data.table)
+import(gTrack)
 import(gUtils)
