--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ exportMethods(lift)
 exportMethods(seqinfo)
 exportMethods(t)
 import(GenomicRanges)
+import(IRanges)
 import(Matrix)
 import(bamUtils)
 import(data.table)
