--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,9 @@ Authors@R: c(person(given = "Jeremiah", family = "Wala", role = c("aut"), email 
     "mimielinski@nygenome.org"))
 Description: R package providing additional capabilities and speed for GenomicRanges operations.
 Remotes:
-  github::mskilab/gUtils,
-  github::mskilab/bamUtils,
-  github::mskilab/gTrack
+  github::mskilab-org/gUtils,
+  github::mskilab-org/bamUtils,
+  github::mskilab-org/gTrack
 Depends:
     R (>= 3.1.0),
     GenomicRanges (>= 1.18),
